feat: modular reset password
